// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioInput /> should render a radio input with a component as the label 1`] = `
<styled.div>
  <div
    className="radioInput"
  >
    <styled.input
      className="input "
      data-component-type="radio_input"
      disabled={false}
      id="test-jsx-input"
      name="test-jsx-input"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="radio"
      htmlFor="test-jsx-input"
    >
      <FontAwesomeIcon
        type="star"
      />
    </label>
  </div>
</styled.div>
`;

exports[`<RadioInput /> should render a radio input with button 1`] = `
<styled.div>
  <div
    className="radioInput"
  >
    <styled.input
      className="input "
      data-component-type="radio_input"
      disabled={false}
      id="test-button-input"
      name="test-button-input"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="radio radio-button"
      htmlFor="test-button-input"
    >
      Hey I am a test string
    </label>
  </div>
</styled.div>
`;

exports[`<RadioInput /> should render a radio input without button 1`] = `
<styled.div>
  <div
    className="radioInput"
  >
    <styled.input
      className="input "
      data-component-type="radio_input"
      disabled={false}
      id="test-input"
      name="test-input"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="radio"
      htmlFor="test-input"
    >
      Hey I am a test string
    </label>
  </div>
</styled.div>
`;
